# markov-chain-monte-carlo

./: .yamllint  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml
.github/workflows/: audit.yml  ci.yml  codecov.yml  rust-clippy.yml
examples/: ising_1d.rs  normal_1d.rs
src/: lib.rs
tests/: proptest_chain.rs
