[package]
name = "markov-chain-monte-carlo"
version = "0.1.0"
authors = ["Adam Getchell <adam@adamgetchell.org>"]
edition = "2024"
rust-version = "1.94.0"

description = "A composable Markov Chain Monte Carlo (MCMC) framework for arbitrary state spaces in Rust"
homepage = "https://github.com/acgetchell/markov-chain-monte-carlo"
license = "BSD-3-Clause"
repository = "https://github.com/acgetchell/markov-chain-monte-carlo"
readme = "README.md"

keywords = ["mcmc", "markov-chain", "monte-carlo", "sampling", "metropolis-hastings"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
rand = "0.10.0"

[dev-dependencies]
proptest = "1.10.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
# Transitive dependency version conflicts are outside our control
multiple_crate_versions = "allow"
